# pyro

./: .gitignore  .pre-commit-config.yaml  README.md  experiment  experiment.py  expetiment  grammar.bnf  main.py  pyproject.toml
.github/workflows/: code_test.yml  lint.yml  publish.yml  pytest.yml
code_tests/: test_compilation.sh
code_tests/python_files/: boolean_expressions.py  elif_statements.py  else_statements.py  fibonacci.py  if_statements.py  nested_if_statement.py  power.py  precedence.py  single_line_definitions.py  while_statements.py
code_tests/result_files/: boolean_expressions.txt  fibonacci.txt  while_statements.txt
pyro_compiler/cli/: args.py  cli.py  commands.py
pyro_compiler/compiler/: compiler.py  tokens.py  utils.py
pyro_compiler/compiler/errors/: compile_time_message.py  error_type.py  message_factory.py  message_registry.py  utils.py
pyro_compiler/compiler/generation/: generation.py  memory.py  registers.py  stores.py  utils.py
pyro_compiler/compiler/parsing/: __init__.py  parsing.py  utils.py
pyro_compiler/compiler/representation/: command.py  declaration.py  ir_builder.py  pseudo_register.py  representation.py  scope.py  struct_declaration.py  structure.py  utils.py  variable.py
pyro_compiler/state/: compiler_commands.py  compiler_state.py
src/: __init__.py  generation.py  parsing.py  representation.py  tokens.py
src/cli/: __init__.py  args.py  cli.py  commands.py  utils.py
src/compiler/: __init__.py  compiler.py  tokens.py
src/compiler/errors/: compile_time_message.py  error_type.py  message_factory.py  message_registry.py  utils.py
src/compiler/generation/: __init__.py  generation.py  utils.py
src/compiler/parsing/: parsing.py  utils.py
src/exceptions/: no_match_error.py  token_error.py
src/generation/: generation.py  utils.py
src/lexer/: grammar.py  grammar_loader.py  lexer.py  tokens.py
src/parsing/: parsing.py  utils.py
src/representation/: __init__.py  representation.py  utils.py
test/: test_tokenizer.py
test/code_tests/: test_compilation.sh
test/integration/: test_full_gen_pipeline.py  test_int_rep_parser_compatability.py  test_parser_tokenizer_compatability.py
test/lexer/: conftest.py  test_lexer.py
test/unit/: test_generation.py  test_inter_rep.py  test_parser.py  test_tokenizer.py  test_utils.py
(+107 files in other folders)
